{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "4813bcf1-b9f5-4f7d-9e4d-0032652c7b3e",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "7e04dac9-0efe-4cc6-bcf8-9ef0fa2a6048",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "170f934c-8032-4d53-a03e-02e98f4541bb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "22b3bc4a-808b-4cbe-8907-2f52a5d62b21",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "233fd82e-eaaf-476a-86a7-2308ba18c90c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0d3d6aee-8d2c-4c4a-877d-e95968b40078",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4cd5fb73-1554-4550-8bca-5956e05655ae",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "e461e156-7132-42b0-919a-7b92d20f987c",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "85d70e98-7a62-4ccd-a7b6-ffde5bcd1bef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7cb07a8e-797c-461c-935b-93d3b771d008",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}